# master-thesis

playground/EZKL/: .gitignore  flake.nix  network.py  test.sh
playground/arkworks/: flake.nix
playground/arkworks/sudoku/: README.md
playground/arkworks/sudoku/src/: alloc.rs  cmp.rs  main.rs
playground/bellman/: flake.nix
playground/bellman/bellman-examples/: README.md
playground/bellman/bellman-examples/src/: main.rs
playground/bellman/sudoku/: Cargo.toml  README.md
playground/bellman/sudoku/src/: main.rs
playground/noir/: flake.nix
playground/snarkjs+circom/: .gitignore  README.md  flake.nix  snarkjs.nix
playground/snarkjs+circom/multiplier2/: multiplier2_0000.zkey  multiplier2_0001.zkey  pot12_0001.ptau  proof.json  verification_key.json
playground/snarkjs+circom/multiplier2/multiplier2_cpp/: multiplier2
playground/snarkjs+circom/sudoku/: pot12_0001.ptau  proof.json  sudoku.circom  sudoku.r1cs  sudoku.sym  sudoku_0000.zkey  sudoku_0001.zkey  test.sh  verification_key.json  witness.wtns
playground/snarkjs+circom/sudoku/sudoku_cpp/: sudoku.cpp
playground/snarkjs+circom/sudoku/sudoku_js/: sudoku.wasm
playground/zkNN/: .gitignore  CMakeLists.txt  README.md  flake.nix  run  test.sh
playground/zkNN/libff/libff/algebra/curves/alt_bn128/: alt_bn128_init.cpp  alt_bn128_init.hpp  alt_bn128_pairing.cpp  alt_bn128_pairing.hpp  alt_bn128_pp.cpp  alt_bn128_pp.hpp
playground/zkNN/libff/libff/algebra/fields/: bigint.hpp  bigint.tcc  fp.hpp  fp.tcc  fp_aux.tcc
playground/zkNN/model/: README.md  requirements.txt
playground/zkNN/model/cnn/: .gitignore  common.py  dataloader.py  dump.py  quant.py  resnet.py  train.py  vgg.py
playground/zkNN/model/transformer/: download_dataset.py  encoder.py  evaluate.py  gpt2.py  quant_and_dump.py  utils.py
playground/zkNN/test/: CMakeLists.txt  cnns.cpp  lookup.cpp  nonlinear.cpp  range.cpp  three_square.cpp  transformer.cpp
playground/zkNN/zknn/: utility.h  zknn-prover.h  zknn-verifier.h
playground/zkNN/zknn/vole/: base-vole-prover.h  base-vole-verifier.h  cope-prover.h  cope-verifier.h  lvole-prover.h  lvole-verifier.h  sps-vole-prover.h  sps-vole-verifier.h  vole-prover.h  vole-triple-prover.h  vole-triple-verifier.h  vole-verifier.h
playground/zkNN/zknn/zknn-arith/: cnn-common.h  cnn-prover.h  cnn-verifier.h  ostriple-common.h  ostriple-prover.h  ostriple-verifier.h  quantized-value.h  transformer-common.h  transformer-prover.h  transformer-verifier.h  zk-fp-exec-prover.h  zk-fp-exec-verifier.h
playground/zokrates/: flake.nix
playground/zokrates/root-example/: .gitignore  test.sh
playground/zokrates/sudoku/: .gitignore  sudoku_checker.input.json  sudoku_checker.zok  test.sh
